--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
