--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,15 @@
         // facebook integration
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
-        <activity android:name=".ProductList" />
+        <activity android:name=".ProductList">
+        </activity>
+        <activity android:name=".BrowseActivity"/>
         <activity android:name=".BrowseBagsActivity"/>
+        <activity android:name=".BrowseShoesActivity"/>
+        <activity android:name=".BrowseClothingActivity"/>
+        <activity android:name=".BrowseWatchesActivity"/>
+        <activity android:name=".BrandSelectionActivity"/>
+        <activity android:name=".BrandProductsActivity"/>
         <activity android:name=".LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
