--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     buildToolsVersion "23.0.1"
 
     repositories {
+        jcenter()
         mavenCentral()
     }
 
@@ -36,6 +37,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'org.imgscalr:imgscalr-lib:4.2'
