--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,7 @@
         // facebook integration
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
-        <activity android:name=".ProductList">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ProductList"/>
         <activity android:name=".BrowseActivity"/>
         <activity android:name=".BrowseBagsActivity"/>
         <activity android:name=".BrowseShoesActivity"/>
@@ -29,8 +24,11 @@
         <activity android:name=".BrandSelectionActivity"/>
         <activity android:name=".BrandProductsActivity"/>
         <activity android:name=".LauncherActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         // facebook login activity
